refactored handlers to live under api package with server. Handlers now implement the OAS interface using provided types and validation
