# api-spec.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
   title: CSV REST API
   version: 1.0.0
@@ -6,11 +6,12 @@ info:
 servers:
   - url: http://localhost:8001
 paths:
-  /load:
+  /import:
     post:
-      summary: Load a CSV file from a URL or upload
+      operationId: importCSV
+      summary: Import a CSV file from a URL or upload
       description: |
-        Load a CSV file by specifying either a URL query parameter
+        Import a CSV file by specifying either a URL query parameter
         or by providing the file name and uploading the CSV in the request body.
       parameters:
         - in: query
@@ -18,7 +19,7 @@ paths:
           schema:
             type: string
             format: uri
-          description: HTTP URL of the CSV file to load
+          description: HTTP URL of the CSV file to import
         - in: query
           name: name
           schema:
@@ -32,84 +33,82 @@ paths:
               type: string
               format: binary
       responses:
-        '200':
+        "200":
           description: Successfully loaded CSV
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoadResponse'
-        '4XX':
-          $ref: '#/components/responses/ErrorResponse'
-        '5XX':
-          $ref: '#/components/responses/ErrorResponse'
-  /api/{uuid}:
+                $ref: "#/components/schemas/ImportResponse"
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /api/{id}:
     get:
+      operationId: fetchCSV
       summary: Query loaded CSV data
       description: Retrieve rows from a previously loaded CSV by UUID
       parameters:
         - in: path
-          name: uuid
+          name: id
           required: true
           schema:
             type: string
             format: uuid
           description: UUID of the loaded CSV resource
         - in: query
-          name: _size
+          name: size
           schema:
             type: integer
             minimum: 1
           description: Limit the number of rows returned
         - in: query
-          name: _sort
+          name: sort
           schema:
             type: string
           description: Column name to sort ascending
         - in: query
-          name: _sort_desc
+          name: sort_desc
           schema:
             type: string
           description: Column name to sort descending
         - in: query
-          name: _offset
+          name: offset
           schema:
             type: integer
             minimum: 0
           description: Offset for pagination
         - in: query
-          name: _shape
+          name: shape
           schema:
             type: string
             enum: [objects, array]
+            default: "objects"
           description: Output JSON format `objects` for array of objects, `array` for array of arrays
         - in: query
-          name: _rowid
+          name: rowid
           schema:
-            type: string
-            enum: [show, hide]
+            type: boolean
+            default: true
           description: Show or hide the `rowid` field
-        - in: query
-          name: _total
-          schema:
-            type: string
-            enum: [show, hide]
-          description: Show or hide the total row count independent of pagination
       responses:
-        '200':
+        "200":
           description: CSV data retrieved successfully
           content:
             application/json:
               schema:
                 oneOf:
-                  - $ref: '#/components/schemas/DataResponseObjects'
-                  - $ref: '#/components/schemas/DataResponseArray'
-        '4XX':
-          $ref: '#/components/responses/ErrorResponse'
-        '5XX':
-          $ref: '#/components/responses/ErrorResponse'
+                  - $ref: "#/components/schemas/ResponseObjects"
+                  - $ref: "#/components/schemas/ResponseArray"
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
-    LoadResponse:
+    ImportResponse:
       type: object
       properties:
         ok:
@@ -122,7 +121,7 @@ components:
       required:
         - ok
         - endpoint
-    DataResponseBase:
+    ResponseBase:
       type: object
       properties:
         ok:
@@ -130,7 +129,7 @@ components:
           example: true
         query_ms:
           type: number
-          format: float
+          format: double
           example: 2.681016922
         columns:
           type: array
@@ -140,10 +139,11 @@ components:
         total:
           type: integer
           example: 3
+
       required: [ok, query_ms, columns, total]
-    DataResponseObjects:
+    ResponseObjects:
       allOf:
-        - $ref: '#/components/schemas/DataResponseBase'
+        - $ref: "#/components/schemas/ResponseBase"
         - type: object
           properties:
             rows:
@@ -151,17 +151,15 @@ components:
               items:
                 type: object
                 additionalProperties: true
-    DataResponseArray:
+    ResponseArray:
       allOf:
-        - $ref: '#/components/schemas/DataResponseBase'
+        - $ref: "#/components/schemas/ResponseBase"
         - type: object
           properties:
             rows:
               type: array
               items:
                 type: array
-                items:
-                  type: string
     ErrorResponse:
       type: object
       properties:
@@ -173,10 +171,3 @@ components:
         message:
           type: string
       required: [timestamp, error, message]
-  responses:
-    ErrorResponse:
-      description: Error response
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ErrorResponse'
